Added Verb, Adjective and Other tables
