# api.py
@@ -1,4 +1,6 @@
 from orm import Noun
+from orm import Verb
+from orm import Adjective
 from main import db
 
 
@@ -20,3 +22,21 @@ def create_noun(body):
     db.session.add(noun)
     db.session.commit()
     return noun.dump(), 201
+
+
+def create_verb(body):
+    praesent = body['praesent']
+    E3 = body['E3']
+    praeteritum = body['praeteritum']
+    perfekt = body['perfekt']
+    verb = Verb(praesent=praesent, E3=E3, praeteritum=praeteritum,
+                perfekt=perfekt)
+    db.session.add(verb)
+    db.session.commit()
+    return verb.dump(), 201
+
+
+def get_verbs():
+    verbs = db.session.query(Verb).all()
+    lst = [verb.dump() for verb in verbs]
+    return lst, 200
